- fixed invisible base layer on start - adding gps waypoints using double click working now - fixed missing calculations of a waypoint on start

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -274,6 +274,11 @@ a:hover {
           background-color:darken(@color,25%);
           .v-gradient(darken(@color,10%),0%,darken(@color,20%),100%);
         }
+        &.gps {
+          @color: desaturate(#FF00FF,60%);
+          background-color:darken(@color,25%);
+          .v-gradient(darken(@color,10%),0%,darken(@color,20%),100%);
+        }
         
         h4 {
           margin:0 0 0.5em 0;
